--- a/ui.combobox.css
+++ b/ui.combobox.css
@@ -1,6 +1,17 @@
-// vim: noexpandtab
+/* vim: noexpandtab : */
 img.comboboxArrow {
 	position: relative;
 	vertical-align: text-bottom;
 	top: 2px;
+}
+
+.comboboxList {
+	border: 1px solid black;
+}
+
+.comboboxList, .combobox {
+	display: block;
+	font-family: sans-serif;
+	font-size: 80%;
+	background-color: white;
 }
