Fixed a couple styling/margin issues.

--- a/ui.combobox.css
+++ b/ui.combobox.css
@@ -1,8 +1,14 @@
-/* vim: noexpandtab : */
+/* 
+ * vim: noexpandtab
+ */
 img.ui-combobox-arrow {
 	position: relative;
 	vertical-align: text-bottom;
 	top: 2px;
+}
+
+* html img.ui-combobox-arrow {
+	top: -3px;
 }
 
 .ui-combobox-list {
