--- a/ui.combobox.css
+++ b/ui.combobox.css
@@ -1,6 +1,11 @@
-/* 
+/*
+ * Copyright (c) 2008 Jonathan Tang
+ * Dual licensed under the MIT (MIT-LICENSE.txt)
+ * and GPL (GPL-LICENSE.txt) licenses.
+ *
  * vim: noexpandtab
  */
+
 img.ui-combobox-arrow {
 	position: relative;
 	vertical-align: text-bottom;
